Refactor item and categories custom exceptions to be more generics